gen/grupo8Parser.java
// Generated from /Users/paulamarcelabarrosorobleda/Documents/PL/practicaObligatoriaMarzo/src/grupo8.g4 by ANTLR 4.13.2

    import java.io.PrintStream;
    import java.io.FileNotFoundException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class grupo8Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, CONSTINT=23, CONSTREAL=24, 
		ID=25, CONSTLIT=26, COMENTARIOS_UNA_LINEA=27, COMENTARIOS_MAS_LINEAS=28, 
		WS=29;
	public static final int
		RULE_prg = 0, RULE_blq = 1, RULE_dcllist = 2, RULE_sentlist = 3, RULE_sentlistPrima = 4, 
		RULE_dcl = 5, RULE_defcte = 6, RULE_ctelist = 7, RULE_ctelistPrima = 8, 
		RULE_simpvalue = 9, RULE_defvar = 10, RULE_defvarlist = 11, RULE_defvarlistPrima = 12, 
		RULE_varlist = 13, RULE_varlistAux = 14, RULE_defproc = 15, RULE_deffun = 16, 
		RULE_formal_paramlist = 17, RULE_formal_param = 18, RULE_formal_paramAux1 = 19, 
		RULE_formal_paramAux2 = 20, RULE_tbas = 21, RULE_sentAux = 22, RULE_asig = 23, 
		RULE_sent = 24, RULE_exp = 25, RULE_expPrima = 26, RULE_op = 27, RULE_factor = 28, 
		RULE_subparamlist = 29, RULE_explist = 30, RULE_explistAux = 31, RULE_proc_call = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"prg", "blq", "dcllist", "sentlist", "sentlistPrima", "dcl", "defcte", 
			"ctelist", "ctelistPrima", "simpvalue", "defvar", "defvarlist", "defvarlistPrima", 
			"varlist", "varlistAux", "defproc", "deffun", "formal_paramlist", "formal_param", 
			"formal_paramAux1", "formal_paramAux2", "tbas", "sentAux", "asig", "sent", 
			"exp", "expPrima", "op", "factor", "subparamlist", "explist", "explistAux", 
			"proc_call"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "';'", "'.'", "'begin'", "'end'", "'const'", "'='", 
			"'var'", "':'", "','", "'procedure'", "'function'", "'('", "')'", "'INTEGER'", 
			"'REAL'", "':='", "'+'", "'-'", "'*'", "'div'", "'mod'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "CONSTINT", 
			"CONSTREAL", "ID", "CONSTLIT", "COMENTARIOS_UNA_LINEA", "COMENTARIOS_MAS_LINEAS", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "grupo8.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private void inicioPrograma(){
	        try{
	            PrintStream archivo = new PrintStream("output.txt");
	            System.setOut(archivo);
	        }catch(FileNotFoundException e){
	            e.printStackTrace();
	        }
	    }

	public grupo8Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrgContext extends ParserRuleContext {
		public Program prog;
		public Token ID;
		public TerminalNode ID() { return getToken(grupo8Parser.ID, 0); }
		public BlqContext blq() {
			return getRuleContext(BlqContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitPrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitPrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(T__0);
			setState(67);
			((PrgContext)_localctx).ID = match(ID);
			((PrgContext)_localctx).prog = new Program((((PrgContext)_localctx).ID!=null?((PrgContext)_localctx).ID.getText():null), false);
			setState(69);
			match(T__1);
			setState(70);
			blq();
			_localctx.prog.setHayBloque(true);
			setState(72);
			match(T__2);
			System.out.println(_localctx.prog.toString());
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlqContext extends ParserRuleContext {
		public Boolean bloq;
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public BlqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterBlq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitBlq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitBlq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlqContext blq() throws RecognitionException {
		BlqContext _localctx = new BlqContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_blq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			dcllist();
			setState(76);
			match(T__3);
			setState(77);
			sentlist();
			setState(78);
			match(T__4);
			((BlqContext)_localctx).bloq = true;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DcllistContext extends ParserRuleContext {
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist() throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dcllist);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__7:
			case T__10:
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				dcl();
				setState(82);
				dcllist();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentlistContext extends ParserRuleContext {
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistPrimaContext sentlistPrima() {
			return getRuleContext(SentlistPrimaContext.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitSentlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitSentlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentlistContext sentlist() throws RecognitionException {
		SentlistContext _localctx = new SentlistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			sent();
			setState(88);
			sentlistPrima();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentlistPrimaContext extends ParserRuleContext {
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistPrimaContext sentlistPrima() {
			return getRuleContext(SentlistPrimaContext.class,0);
		}
		public SentlistPrimaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentlistPrima; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterSentlistPrima(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitSentlistPrima(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitSentlistPrima(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentlistPrimaContext sentlistPrima() throws RecognitionException {
		SentlistPrimaContext _localctx = new SentlistPrimaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentlistPrima);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				sent();
				setState(91);
				sentlistPrima();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DclContext extends ParserRuleContext {
		public DefcteContext defcte() {
			return getRuleContext(DefcteContext.class,0);
		}
		public DefvarContext defvar() {
			return getRuleContext(DefvarContext.class,0);
		}
		public DefprocContext defproc() {
			return getRuleContext(DefprocContext.class,0);
		}
		public DeffunContext deffun() {
			return getRuleContext(DeffunContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dcl);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				defcte();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				defvar();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				defproc();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				deffun();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefcteContext extends ParserRuleContext {
		public Variable varCte;
		public CtelistContext ctelist() {
			return getRuleContext(CtelistContext.class,0);
		}
		public DefcteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defcte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterDefcte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitDefcte(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitDefcte(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefcteContext defcte() throws RecognitionException {
		DefcteContext _localctx = new DefcteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defcte);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__5);
			setState(103);
			ctelist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CtelistContext extends ParserRuleContext {
		public Variable var;
		public Token ID;
		public SimpvalueContext simpvalue;
		public TerminalNode ID() { return getToken(grupo8Parser.ID, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public CtelistPrimaContext ctelistPrima() {
			return getRuleContext(CtelistPrimaContext.class,0);
		}
		public CtelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterCtelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitCtelist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitCtelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtelistContext ctelist() throws RecognitionException {
		CtelistContext _localctx = new CtelistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ctelist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			((CtelistContext)_localctx).ID = match(ID);
			setState(106);
			match(T__6);
			setState(107);
			((CtelistContext)_localctx).simpvalue = simpvalue();
			((CtelistContext)_localctx).var = new Variable((((CtelistContext)_localctx).ID!=null?((CtelistContext)_localctx).ID.getText():null), ((CtelistContext)_localctx).simpvalue.valor);
			setState(109);
			match(T__1);
			setState(110);
			ctelistPrima(varP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CtelistPrimaContext extends ParserRuleContext {
		public Variable varP;
		public Token ID;
		public SimpvalueContext simpvalue;
		public TerminalNode ID() { return getToken(grupo8Parser.ID, 0); }
		public SimpvalueContext simpvalue() {
			return getRuleContext(SimpvalueContext.class,0);
		}
		public CtelistPrimaContext ctelistPrima() {
			return getRuleContext(CtelistPrimaContext.class,0);
		}
		public CtelistPrimaContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CtelistPrimaContext(ParserRuleContext parent, int invokingState, Variable varP) {
			super(parent, invokingState);
			this.varP = varP;
		}
		@Override public int getRuleIndex() { return RULE_ctelistPrima; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterCtelistPrima(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitCtelistPrima(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitCtelistPrima(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtelistPrimaContext ctelistPrima(Variable varP) throws RecognitionException {
		CtelistPrimaContext _localctx = new CtelistPrimaContext(_ctx, getState(), varP);
		enterRule(_localctx, 16, RULE_ctelistPrima);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				((CtelistPrimaContext)_localctx).ID = match(ID);
				setState(113);
				match(T__6);
				setState(114);
				((CtelistPrimaContext)_localctx).simpvalue = simpvalue();
				setState(115);
				match(T__1);
				setState(116);
				ctelistPrima(varP);
				((CtelistPrimaContext)_localctx).varP = new Variable((((CtelistPrimaContext)_localctx).ID!=null?((CtelistPrimaContext)_localctx).ID.getText():null), ((CtelistPrimaContext)_localctx).simpvalue.valor);
				}
				break;
			case T__3:
			case T__5:
			case T__7:
			case T__10:
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpvalueContext extends ParserRuleContext {
		public String valor;
		public Token CONSTINT;
		public Token CONSTREAL;
		public Token CONSTLIT;
		public TerminalNode CONSTINT() { return getToken(grupo8Parser.CONSTINT, 0); }
		public TerminalNode CONSTREAL() { return getToken(grupo8Parser.CONSTREAL, 0); }
		public TerminalNode CONSTLIT() { return getToken(grupo8Parser.CONSTLIT, 0); }
		public SimpvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterSimpvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitSimpvalue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitSimpvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpvalueContext simpvalue() throws RecognitionException {
		SimpvalueContext _localctx = new SimpvalueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_simpvalue);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTINT:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				((SimpvalueContext)_localctx).CONSTINT = match(CONSTINT);
				((SimpvalueContext)_localctx).valor = (((SimpvalueContext)_localctx).CONSTINT!=null?((SimpvalueContext)_localctx).CONSTINT.getText():null);
				}
				break;
			case CONSTREAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				((SimpvalueContext)_localctx).CONSTREAL = match(CONSTREAL);
				((SimpvalueContext)_localctx).valor = (((SimpvalueContext)_localctx).CONSTREAL!=null?((SimpvalueContext)_localctx).CONSTREAL.getText():null);
				}
				break;
			case CONSTLIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				((SimpvalueContext)_localctx).CONSTLIT = match(CONSTLIT);
				((SimpvalueContext)_localctx).valor = (((SimpvalueContext)_localctx).CONSTLIT!=null?((SimpvalueContext)_localctx).CONSTLIT.getText():null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefvarContext extends ParserRuleContext {
		public DefvarlistContext defvarlist() {
			return getRuleContext(DefvarlistContext.class,0);
		}
		public DefvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterDefvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitDefvar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitDefvar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefvarContext defvar() throws RecognitionException {
		DefvarContext _localctx = new DefvarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defvar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__7);
			setState(131);
			defvarlist();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefvarlistContext extends ParserRuleContext {
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public TbasContext tbas() {
			return getRuleContext(TbasContext.class,0);
		}
		public DefvarlistPrimaContext defvarlistPrima() {
			return getRuleContext(DefvarlistPrimaContext.class,0);
		}
		public DefvarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defvarlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterDefvarlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitDefvarlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitDefvarlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefvarlistContext defvarlist() throws RecognitionException {
		DefvarlistContext _localctx = new DefvarlistContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_defvarlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			varlist();
			setState(134);
			match(T__8);
			setState(135);
			tbas();
			setState(136);
			match(T__1);
			setState(137);
			defvarlistPrima();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefvarlistPrimaContext extends ParserRuleContext {
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public TbasContext tbas() {
			return getRuleContext(TbasContext.class,0);
		}
		public DefvarlistPrimaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defvarlistPrima; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).enterDefvarlistPrima(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof grupo8Listener ) ((grupo8Listener)listener).exitDefvarlistPrima(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof grupo8Visitor ) return ((grupo8Visitor<? extends T>)visitor).visitDefvarlistPrima(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefvarlistPrimaContext defvarlistPrima() throws RecognitionException {
		DefvarlistPrimaContext _localctx = new DefvarlistPrimaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_defvarlistPrima);
		try {
			setState(145);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				varlist();
				setState(140);
				match(T__8);
				setState(141);
				tbas();
				setState(142);
				match(T__1);
				}
				break;
			case T__3:
			case T__5:
			case T__7:
			case T__10:
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
